<?xml version="1.0"?>
<package format="2">
  <name>interactpy</name>
  <version>1.0.0</version>
  <description>
    Python library for interacting with Archie through OpenRAVE (Interact Lab).
  </description>
  <maintainer email="123@abc.com">Bob</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>python</depend>

  <exec_depend>kinova_description</exec_depend>
  <exec_depend>ipython</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>or_urdf</exec_depend>
  <exec_depend>openrave</exec_depend>
</package>
